--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
 
        <ul class="link">
 
-        <li  class="lista"> <a class="ancora"  href="google.com">home</a> </li>
-        <li  class="lista"> <a  class="ancora" href="http://">quem somos</a></li>
-        <li  class="lista"> <a  class="ancora" href="http://">projeto</a></li>
-        <li  class="lista"> <a  class="ancora"  href="http://">contato </a></li>
+        <li  class="lista"> <a class="ancora"  href="#">home</a> </li>
+        <li  class="lista"> <a  class="ancora" href="#">quem somos</a></li>
+        <li  class="lista"> <a  class="ancora" href="#">projeto</a></li>
+        <li  class="lista"> <a  class="ancora"  href="#">contato </a></li>
     </ul>
 
 </div>
+
     </header>
+    <main>
+
+    </main>
+
+    <footer>
+    </footer>
     
 </body>
 </html>
